--- a/pageDetails/homepage.html
+++ b/pageDetails/homepage.html
@@ -24,17 +24,17 @@
         <div class="container">
             <div class="row align-items-center">
                 <ul class="nav">
-                    <li class="nav-item">
+                    <li class="nav-item d-md-block d-none">
                         <a class="nav-link" href="#"><img src="../image/fill-1.svg" alt="">
                             <p>sevenhillsltd@gmail.com</p>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><img src="../image/phoneIcon.svg" alt="">
-                            <p>+84 875 789 287</p>
+                            <p class="md-last"><a href="tel:+84875789287"> +84 875 789 287</a></p>
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item d-md-block d-none">
                         <a class="nav-link" href="#"><img src="../image/clockicon.svg" alt="">
                             <p class="last">9 AM - 6 PM</p>
                         </a>
@@ -73,7 +73,7 @@
                                 <a class="nav-link dropdown-toggle" ondblclick="renderOurProduct();"
                                    id="navbarDropdownMenuLink"
                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Our Product
+                                    Our Products
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                     <li><a class="dropdown-item" href="#">Product 1</a></li>
@@ -111,7 +111,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Meeting Founder</a>
+                                <a class="nav-link" href="#">Meeting The Founder</a>
                             </li>
                         </ul>
                     </div>
@@ -170,19 +170,19 @@
         <span class="btn-inner text-white">Contact Us</span>
     </a>
 </div>
-<div class="panelServies p-3 p-md-5">
+<div class="panelServies p-md-5">
     <div class="container">
         <h1 class="p-3">Our Services</h1>
-        <div class="row align-items-center p-3">
-            <div class="col">
+        <div class="row align-items-center p-md-3">
+            <div class="col-4">
                 <img src="../image/artboard-1-copy.png" alt="" class="img-fluid"/>
                 <h3>Import</h3>
             </div>
-            <div class="col">
+            <div class="col-4">
                 <img src="../image/export.png" alt="" class="img-fluid"/>
                 <h3>Export</h3>
             </div>
-            <div class="col">
+            <div class="col-4">
                 <img src="../image/processing.png" alt="" class="img-fluid"/>
                 <h3>Processing</h3>
             </div>
@@ -191,7 +191,7 @@
 </div>
 <div class="panelExpertise">
     <div class="header">
-        <h1>Our Product</h1>
+        <h1>Our Products</h1>
     </div>
     <div class="container">
         <section class="expertiseContent row no-gutter align-items-center">
@@ -227,18 +227,24 @@
         <div class="slideProduct">
             <div class="slider owl-carousel owl-theme">
                 <div class="product">
-                    <h3 class="text-white position-absolute">Raw Cashew Nuts</h3>
+                    <h3 class="text-white position-absolute mr-auto ml-auto h3CenterDiv widthCustom">Agricultural
+                        Chemical Products</h3>
                     <img src="../image/group-19-copy.png" alt="">
                 </div>
                 <div class="product">
-                    <h3 class="text-white position-absolute">Agricultural
+                    <h3 class="text-white position-absolute mr-auto ml-auto h3CenterDiv widthCustom">Agricultural
                         Chemical Products</h3>
-                    <img src="../image/india1.jpg" alt="">
+                    <img src="../image/group-19-copy.png" alt="">
                 </div>
                 <div class="product">
-                    <h3 class="text-white position-absolute">Agricultural
+                    <h3 class="text-white position-absolute mr-auto ml-auto h3CenterDiv widthCustom">Agricultural
                         Chemical Products</h3>
-                    <img src="../image/grain.jpg" alt="">
+                    <img src="../image/group-19-copy.png" alt="">
+                </div>
+                <div class="product">
+                    <h3 class="text-white position-absolute mr-auto ml-auto h3CenterDiv widthCustom">Agricultural
+                        Chemical Products</h3>
+                    <img src="../image/group-19-copy.png" alt="">
                 </div>
             </div>
         </div>
@@ -338,7 +344,7 @@
         <ul class="list-group col-md-twenty productDetails p-2">
             <li class="list-group-item active headerGroupItem" data-toggle="collapse">Food Grains and Allied Products
             </li>
-            <div class="listItemCollapse1">
+            <div class="listItemCollapse0">
                 <li class="list-group-item">Pulses</li>
                 <li class="list-group-item">Lentils</li>
                 <li class="list-group-item">Rice</li>
@@ -355,11 +361,11 @@
         </ul>
         <ul class="list-group col-md-twenty productDetails p-2">
             <li class="list-group-item active headerGroupItem" data-toggle="collapse">Edible Nuts</li>
-            <div class="listItemCollapse2">
+            <div class="listItemCollapse1">
                 <li class="list-group-item">Cashew Kernels</li>
             </div>
             <li class="list-group-item active headerGroupItem" data-toggle="collapse">Spices</li>
-            <div class="listItemCollapse3">
+            <div class="listItemCollapse2">
                 <li class="list-group-item">Black Pepper</li>
                 <li class="list-group-item">White Pepper</li>
                 <li class="list-group-item">Star Anise Seeds</li>
@@ -372,7 +378,7 @@
         </ul>
         <ul class="list-group col-md-twenty productDetails p-2">
             <li class="list-group-item active headerGroupItem" data-toggle="collapse">Other Products</li>
-            <div class="listItemCollapse7">
+            <div class="listItemCollapse6">
                 <li class="list-group-item">Guar Gum</li>
                 <li class="list-group-item">Desiccated coconut</li>
                 <li class="list-group-item">Cocoa Beans & Powder</li>
@@ -382,7 +388,7 @@
             </div>
             <li class="list-group-item active headerGroupItem" data-toggle="collapse">Agricultural Commodities</li>
             <li class="list-group-item active headerGroupItem" data-toggle="collapse">Spices and Condiments</li>
-            <div class="listItemCollapse9">
+            <div class="listItemCollapse8">
                 <li class="list-group-item">Red Chillies</li>
                 <li class="list-group-item">Turmeric Fingers</li>
                 <li class="list-group-item">Sun dried mango slices</li>
@@ -392,7 +398,7 @@
         </ul>
         <ul class="list-group col-md-twenty productDetails p-2">
             <li class="list-group-item active headerGroupItem" data-toggle="collapse">Oil seeds</li>
-            <div class="listItemCollapse10">
+            <div class="listItemCollapse9">
                 <li class="list-group-item">Soyabean</li>
                 <li class="list-group-item">Ground Nut</li>
                 <li class="list-group-item">Rapeseeds</li>
@@ -437,7 +443,7 @@
                     <ul>
                         <li>Home</li>
                         <li>Services</li>
-                        <li>Our Product</li>
+                        <li>Our Products</li>
                         <li>About us</li>
                         <li>Contact</li>
                         <li>Meet the founder</li>
