--- a/pageDetails/ourProduct.html
+++ b/pageDetails/ourProduct.html
@@ -23,17 +23,17 @@
     <div class="container">
         <div class="row align-items-center">
             <ul class="nav">
-                <li class="nav-item">
+                <li class="nav-item d-md-block d-none">
                     <a class="nav-link" href="#"><img src="../image/fill-1.svg" alt="">
                         <p>sevenhillsltd@gmail.com</p>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><img src="../image/phoneIcon.svg" alt="">
-                        <p>+84 875 789 287</p>
+                        <p class="md-last"><a href="tel:+84875789287"> +84 875 789 287</a></p>
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item d-md-block d-none">
                     <a class="nav-link" href="#"><img src="../image/clockicon.svg" alt="">
                         <p class="last">9 AM - 6 PM</p>
                     </a>
@@ -71,7 +71,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Our Product
+                                Our Products
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <li><a class="dropdown-item" href="#">Product 1</a></li>
@@ -109,7 +109,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Meeting Founder</a>
+                            <a class="nav-link" href="#">Meeting The Founder</a>
                         </li>
                     </ul>
                 </div>
@@ -122,11 +122,11 @@
 <div class="pannelAboutUs">
     <img src="../image/pannelaboutus.jpg"/>
 </div>
-<div class="container">
-    <div class="row">
-        <h2 class="titleProduct headerProduct text-center text-uppercase w-100 p-md-5 p-3 ">out product</h2>
-        <h4 class="subtitleProduct headerProduct text-center text-uppercase w-100 pt-3">export</h4>
-        <div class="carousel-wrap col-12">
+<div class="container-fluid pl-5 pr-5">
+    <div class="row pl-md-5 pr-md-5">
+        <h2 class="titleProduct headerProduct text-center text-uppercase w-100 p-md-4 p-2">out product</h2>
+        <h4 class="subtitleProduct headerProduct text-center text-uppercase w-100 pt-2">export</h4>
+        <div class="carousel-wrap pl-md-5 pr-md-5 col-12">
             <div class="owl-carousel owl-theme">
                 <div class="item">
                     <img src="http://lorempixel.com/640/480/nightlife/"/>
@@ -152,10 +152,8 @@
                     <img src="http://lorempixel.com/640/480/cats/"/>
                     <span class="img-text">cats</span>
                 </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/city/"/>
-                    <span class="img-text">city</span>
-                </div>
+
+
                 <div class="item">
                     <img src="http://lorempixel.com/640/480/food/"/>
                     <span class="img-text">food</span>
@@ -182,8 +180,8 @@
                 </div>
             </div>
         </div>
-        <h4 class="subtitleProduct headerProduct text-center text-uppercase w-100 pt-md-5 pt-3">import</h4>
-        <div class="carousel-wrap col-12 pb-md-5 pb-3">
+        <h4 class="subtitleProduct headerProduct text-center text-uppercase w-100 pt-md-4 pt-2">import</h4>
+        <div class="carousel-wrap pl-md-5 pr-md-5 col-12 pb-md-4 pb-2">
             <div class="owl-carousel owl-theme">
                 <div class="item">
                     <img src="http://lorempixel.com/640/480/nightlife/"/>
@@ -243,94 +241,90 @@
 </div>
 
 </body>
-
-<div class="productCategory">
-    <div class="container">
-        <div class="row">
-            <div class="headerCategory flex-column">
-                <img src="../image/categoryImg.svg" alt="">
-                <span>
-                        <h2>Product Categories</h2>
-                    </span>
+<div class="productCategory container-fluid  p-4">
+    <div class="headerCategory flex-column p-md-2">
+        <img src="../image/categoryImg.svg" alt="">
+        <span><h2>Product Categories</h2></span>
+    </div>
+    <div class="contentCategory d-flex">
+        <ul class="list-group col-md-twenty productDetails p-2">
+            <li class="list-group-item active headerGroupItem" data-toggle="collapse">Food Grains and Allied Products
+            </li>
+            <div class="listItemCollapse0">
+                <li class="list-group-item">Pulses</li>
+                <li class="list-group-item">Lentils</li>
+                <li class="list-group-item">Rice</li>
+                <li class="list-group-item">Gram</li>
+                <li class="list-group-item">Wheat</li>
+                <li class="list-group-item">Wheat Flour</li>
+                <li class="list-group-item">Suji</li>
+                <li class="list-group-item">Maida</li>
+                <li class="list-group-item">Kabuli Channa</li>
+                <li class="list-group-item">Black Channa</li>
+                <li class="list-group-item">Pigeon beans</li>
+                <li class="list-group-item">Kidney beans</li>
             </div>
-            <div class="contentCategory col-12 d-flex">
-                <ul class="list-group col-md-twenty productDetails align-self-center p-2">
-                    <li class="list-group-item active headerGroupItem" data-toggle="collapse">Food Grains and
-                        Allied Products
-                    </li>
-                    <div class="listItemCollapse">
-                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                        <li class="list-group-item">Morbi leo risus</li>
-                        <li class="list-group-item">Porta ac consectetur ac</li>
-                        <li class="list-group-item">Vestibulum at eros</li>
-                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                        <li class="list-group-item">Morbi leo risus</li>
-                        <li class="list-group-item">Porta ac consectetur ac</li>
-                        <li class="list-group-item">Vestibulum at eros</li>
-                    </div>
-                </ul>
-                <ul class="list-group col-md-twenty productDetails align-self-center p-2">
-                    <li class="list-group-item active headerGroupItem" data-toggle="collapse">Food Grains and
-                        Allied Products
-                    </li>
-                    <div class="listItemCollapse">
-                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                        <li class="list-group-item">Morbi leo risus</li>
-                        <li class="list-group-item">Porta ac consectetur ac</li>
-                        <li class="list-group-item">Vestibulum at eros</li>
-                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                        <li class="list-group-item">Morbi leo risus</li>
-                        <li class="list-group-item">Porta ac consectetur ac</li>
-                        <li class="list-group-item">Vestibulum at eros</li>
-                    </div>
-                </ul>
-                <ul class="list-group col-md-twenty productDetails align-self-center p-2">
-                    <li class="list-group-item active headerGroupItem" data-toggle="collapse">Food Grains and
-                        Allied Products
-                    </li>
-                    <div class="listItemCollapse">
-                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                        <li class="list-group-item">Morbi leo risus</li>
-                        <li class="list-group-item">Porta ac consectetur ac</li>
-                        <li class="list-group-item">Vestibulum at eros</li>
-                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                        <li class="list-group-item">Morbi leo risus</li>
-                        <li class="list-group-item">Porta ac consectetur ac</li>
-                        <li class="list-group-item">Vestibulum at eros</li>
-                    </div>
-                </ul>
-                <ul class="list-group col-md-twenty productDetails align-self-center p-2">
-                    <li class="list-group-item active headerGroupItem" data-toggle="collapse">Food Grains and
-                        Allied Products
-                    </li>
-                    <div class="listItemCollapse">
-                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                        <li class="list-group-item">Morbi leo risus</li>
-                        <li class="list-group-item">Porta ac consectetur ac</li>
-                        <li class="list-group-item">Vestibulum at eros</li>
-                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                        <li class="list-group-item">Morbi leo risus</li>
-                        <li class="list-group-item">Porta ac consectetur ac</li>
-                        <li class="list-group-item">Vestibulum at eros</li>
-                    </div>
-                </ul>
-                <ul class="list-group col-md-twenty productDetails align-self-center p-2">
-                    <li class="list-group-item active headerGroupItem" data-toggle="collapse">Food Grains and
-                        Allied Products
-                    </li>
-                    <div class="listItemCollapse">
-                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                        <li class="list-group-item">Morbi leo risus</li>
-                        <li class="list-group-item">Porta ac consectetur ac</li>
-                        <li class="list-group-item">Vestibulum at eros</li>
-                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                        <li class="list-group-item">Morbi leo risus</li>
-                        <li class="list-group-item">Porta ac consectetur ac</li>
-                        <li class="list-group-item">Vestibulum at eros</li>
-                    </div>
-                </ul>
+        </ul>
+        <ul class="list-group col-md-twenty productDetails p-2">
+            <li class="list-group-item active headerGroupItem" data-toggle="collapse">Edible Nuts</li>
+            <div class="listItemCollapse1">
+                <li class="list-group-item">Cashew Kernels</li>
             </div>
-        </div>
+            <li class="list-group-item active headerGroupItem" data-toggle="collapse">Spices</li>
+            <div class="listItemCollapse2">
+                <li class="list-group-item">Black Pepper</li>
+                <li class="list-group-item">White Pepper</li>
+                <li class="list-group-item">Star Anise Seeds</li>
+                <li class="list-group-item">Cassia</li>
+                <li class="list-group-item">Cinnamon</li>
+            </div>
+            <li class="list-group-item active headerGroupItem" data-toggle="collapse">Industrial Chemicals</li>
+            <li class="list-group-item active headerGroupItem" data-toggle="collapse">Pottery & Handicrafts</li>
+            <li class="list-group-item active headerGroupItem" data-toggle="collapse">Machinery & Raw Materials</li>
+        </ul>
+        <ul class="list-group col-md-twenty productDetails p-2">
+            <li class="list-group-item active headerGroupItem" data-toggle="collapse">Other Products</li>
+            <div class="listItemCollapse6">
+                <li class="list-group-item">Guar Gum</li>
+                <li class="list-group-item">Desiccated coconut</li>
+                <li class="list-group-item">Cocoa Beans & Powder</li>
+                <li class="list-group-item">Tapioca</li>
+                <li class="list-group-item">Glucose</li>
+                <li class="list-group-item">Corn Starch</li>
+            </div>
+            <li class="list-group-item active headerGroupItem" data-toggle="collapse">Agricultural Commodities</li>
+            <li class="list-group-item active headerGroupItem" data-toggle="collapse">Spices and Condiments</li>
+            <div class="listItemCollapse8">
+                <li class="list-group-item">Red Chillies</li>
+                <li class="list-group-item">Turmeric Fingers</li>
+                <li class="list-group-item">Sun dried mango slices</li>
+                <li class="list-group-item">Mango dry powder</li>
+                <li class="list-group-item">Fresh&Dry Ginger</li>
+            </div>
+        </ul>
+        <ul class="list-group col-md-twenty productDetails p-2">
+            <li class="list-group-item active headerGroupItem" data-toggle="collapse">Oil seeds</li>
+            <div class="listItemCollapse9">
+                <li class="list-group-item">Soyabean</li>
+                <li class="list-group-item">Ground Nut</li>
+                <li class="list-group-item">Rapeseeds</li>
+                <li class="list-group-item">Cotton</li>
+                <li class="list-group-item">Castor</li>
+                <li class="list-group-item">Sunflower</li>
+                <li class="list-group-item">Sesame</li>
+                <li class="list-group-item">Linseed</li>
+            </div>
+        </ul>
+        <ul class="list-group col-md-twenty productDetails p-2">
+            <li class="list-group-item active headerGroupItem" data-toggle="collapse">Live Stock , Frozen Meat, Sea
+                Food,
+                Dairy & Poultry Products,
+                Dairy Equipments
+            </li>
+            <li class="list-group-item active headerGroupItem" data-toggle="collapse">Agro Chemicals</li>
+            <li class="list-group-item active headerGroupItem" data-toggle="collapse">Pharmaceuticals</li>
+            <li class="list-group-item active headerGroupItem" data-toggle="collapse">Textile Products and apparels</li>
+        </ul>
     </div>
 </div>
 <footer>
@@ -355,7 +349,7 @@
                     <ul>
                         <li>Home</li>
                         <li>Services</li>
-                        <li>Our Product</li>
+                        <li>Our Products</li>
                         <li>About us</li>
                         <li>Contact</li>
                         <li>Meet the founder</li>
@@ -403,7 +397,7 @@
                 items: 3
             },
             1000: {
-                items: 4
+                items: 6
             }
         }
     });
