--- a/pageDetails/homepage.html
+++ b/pageDetails/homepage.html
@@ -30,8 +30,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><img src="../image/phoneIcon.svg" alt="">
-                            <p class="md-last"><a href="tel:+84875789287"> +84 875 789 287</a></p>
+                        <a class="nav-link" href="tel:+84875789287"><img src="../image/phoneIcon.svg" alt="">
+                            <p class="md-last">+84 875 789 287</p>
                         </a>
                     </li>
                     <li class="nav-item d-md-block d-none">
