--- a/pageDetails/homepage.html
+++ b/pageDetails/homepage.html
@@ -227,25 +227,35 @@
         <div class="slideProduct">
             <div class="slider owl-carousel owl-theme">
                 <div class="product">
-                    <h3 class="text-white position-absolute mr-auto ml-auto h3CenterDiv widthCustom">Agricultural
+                    <h3 class="text-white position-absolute mr-auto ml-auto h3CenterDiv text-center">Agricultural
                         Chemical Products</h3>
                     <img src="../image/group-19-copy.png" alt="">
                 </div>
                 <div class="product">
-                    <h3 class="text-white position-absolute mr-auto ml-auto h3CenterDiv widthCustom">Agricultural
+                    <h3 class="position-absolute text-white mr-auto ml-auto h3CenterDiv text-center">Grains</h3>
+                    <img src="../image/group-19-copy.png" alt="">
+                </div>
+                <div class="product">
+                    <h3 class="text-white position-absolute mr-auto ml-auto h3CenterDiv text-center">Agricultural
                         Chemical Products</h3>
                     <img src="../image/group-19-copy.png" alt="">
                 </div>
                 <div class="product">
-                    <h3 class="text-white position-absolute mr-auto ml-auto h3CenterDiv widthCustom">Agricultural
+                    <h3 class="text-white position-absolute mr-auto ml-auto h3CenterDiv text-center">Agricultural
                         Chemical Products</h3>
                     <img src="../image/group-19-copy.png" alt="">
                 </div>
                 <div class="product">
-                    <h3 class="text-white position-absolute mr-auto ml-auto h3CenterDiv widthCustom">Agricultural
+                    <h3 class="text-white position-absolute mr-auto ml-auto h3CenterDiv text-center">Agricultural
                         Chemical Products</h3>
                     <img src="../image/group-19-copy.png" alt="">
                 </div>
+                <div class="product">
+                    <h3 class="text-white position-absolute mr-auto ml-auto h3CenterDiv text-center">Agricultural
+                        Chemical Products</h3>
+                    <img src="../image/group-19-copy.png" alt="">
+                </div>
+
             </div>
         </div>
     </div>
